# serverwatch-ai-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: bot_spec.md  copilot-instructions.md
.github/instrucciones-obligatorias/: README.md
.github/workflows/: lint.yml  package.yml
app/: main.py
app/core/: auth.py  config.py  store.py
app/handlers/: alerts.py  author.py  chat.py  glances_menu.py  help.py  models.py  start.py  status.py
app/services/: glances.py  llm_router.py  ollama.py  scheduler.py
app/services/providers/: anthropic_provider.py  common.py  deepseek_provider.py  openai_provider.py
app/utils/: formatting.py  i18n.py  streaming.py
locale/: de.json  en.json  es.json  fr.json  it.json
tests/: test_alerts.py  test_config_validation.py  test_glances.py  test_glances_menu.py  test_history.py  test_i18n.py  test_models.py  test_scheduler.py  test_store.py  test_store_crud.py
